[tool.poetry]
name = "experiments-py"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "experiments_py"}]

[tool.poetry.dependencies]
python = "<3.13,>=3.9"
numpy = "^1.25.1"
scipy = "^1.11.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
